syntax = "proto3";

package banking;

import "finance.proto";
option go_package = "github.com/joseluis8906/project-layout/internal/banking/pb";

service TxService {
    rpc Transfer(TransferRequest) returns (TransferResponse);
    rpc CheckTxStatus(CheckTxStatusRequest) returns (CheckTxStatusResponse);
}

message TransferRequest {
    TxBank src_bank = 1;
    TxBank dst_bank = 2;
    company.Money amount = 3;
}

message TransferJob {
    string id = 1;
    TxBank src_bank = 2;
    TxBank dst_bank = 3;
    company.Money amount = 4;
}

message TransferResponse {
    string tx_id = 1;
}

message TxBank {
    message Account {
        string type = 1;
        string number = 2;
    }

    string name = 1;
    Account account = 2;
}

message CheckTxStatusRequest {
    string tx_id = 1;
}

message CheckTxStatusResponse {
    string status = 1;
}
